# selenoprotein-analysis

./: README.md  bubble_plot_hits.py  generate_hit_matrix.py  hit_matrix.tsv  parse_pretty_files.py  parsed_results.tsv  plot_hits_per_genome.py  plot_hits_per_query.py  pyproject.toml
data/: Calcidiscus_leptoporus_var_RCC1130.output.pretty  Chrysochromulina_leadbeateri_var_UIO393.mainGenome.output.output.pretty  Chrysochromulina_simplex_var_UIO136.output.output.pretty  Coccolithus_braarudii_var_RCC3777.output.output.pretty  Coccolithus_leptoporus_var_RCC1130.output.output.pretty  Corisphaera_gracilis_var_Kamptner_NIES_2369.output.output.pretty  Dicrateria_rotunda_var_Eilat_AL_16_RC4477.output.output.pretty  Dicrateria_rotunda_var_Malina_E25_N2_P19_B4_RC2298.output.output.pretty  Dicrateria_rotunda_var_MicroPolar_03_F24PG5_RCC4501.output.output.pretty  Dicrateria_rotunda_var_RCC4500.output.output.pretty  Dicrateria_rotunda_var_RCC704.output.output.pretty  Emilania_huxleyi.output.pretty  Hymenomonas_coronata_var_Mills_NIES_1016.output.output.pretty  Imantonia_rotunda_var_Eilat_AL_16_RCC4477.output.output.pretty  Imantonia_sp_RCC4780.output.output.pretty  Isochrysis_sp_Dm2.output.output.pretty  Ochrosphaera_ochrosphaera_sp_CCMP3194.output.output.pretty  Pavlova_pinguis_var_AC96_RCC1539.output.output.pretty  Pavlova_sp_BMAK269_RCC_5622.output.output.pretty  Pavlova_sp_CC15_RCC_6257.output.output.pretty  Pavlova_sp_Sipadan_M1_2_RCC_2550.output.output.pretty  Pleurochrysis_elongata_var_CCMP874.output.output.pretty  Prymnesium_kappa_var_UIO034.output.output.pretty  Prymnesium_platychrysis_sp_CCMP1217.mainGenome.fasta.output.output.pretty  Prymnesium_polylepis_var_UIO040.output.output.pretty  Pseudohaptolina_sorokinii_var_GE_PG_IC_SORT_272_RCC5268.output.output.pretty  Pseudohaptolina_sorokinii_var_GE_PG_IC_SORT_272_RCC5270.output.output.pretty  Ruttnera_lamellosa_var_CCMP3415.output.output.pretty  Syracosphaera_pulchra_var_2876.output.output.pretty  Umbilicosphaera_foliosa_var_2878_1_1.output.output.pretty
